P4ADEV-2126-activity-installment-ingestion-flow-file